# vehicle_ros_driver_generator

./: .gitignore  README.md  dbc_naming_conventions.py  extract_dbc_meta.py  gen.py  gen_config_file.py  gen_msg_file.py  gen_protocols.py  gen_ros_node.py
common/: common.py  gen_control_func.py  gen_report_func.py
config/: extract_dbc_meta.py  fulongma.yml  fulongma_sweeper.dbc  gem_conf.yml  params.yaml  pixmoving.dbc  pixmoving.yml  pixmoving_conf.yml  robobus_conf.yml
output/pix_driver/: CMakeLists.txt
output/pix_driver/include/: acu_sweepctrlcmd_107.hpp  bms_report_512.hpp  brake_command_101.hpp  brake_report_501.hpp  gear_command_103.hpp  gear_report_503.hpp  park_command_104.hpp  park_report_504.hpp  steering_command_102.hpp  steering_report_502.hpp  throttle_command_100.hpp  throttle_report_500.hpp  vcu2acu_chassiserrcode1_200.hpp  vcu2acu_chassiserrcode2_201.hpp  vcu2acu_chassiserrcode3_202.hpp  vcu2acu_sweepfansta_518.hpp  vcu2acu_sweepsta_519.hpp  vcu2acu_sweepstafb_517.hpp  vcu2acu_sweepweedingsta_520.hpp  vcu2acu_sweepworksta_521.hpp  vcu_report_505.hpp  vehicle_mode_command_105.hpp  wheelspeed_report_506.hpp
output/pix_driver/src/: acu_sweepctrlcmd_107.cc  bms_report_512.cc  brake_command_101.cc  brake_report_501.cc  command_node.cc  gear_command_103.cc  gear_report_503.cc  park_command_104.cc  park_report_504.cc  report_node.cc  steering_command_102.cc  steering_report_502.cc  throttle_command_100.cc  throttle_report_500.cc  vcu2acu_chassiserrcode1_200.cc  vcu2acu_chassiserrcode2_201.cc  vcu2acu_chassiserrcode3_202.cc  vcu2acu_sweepfansta_518.cc  vcu2acu_sweepsta_519.cc  vcu2acu_sweepstafb_517.cc  vcu2acu_sweepweedingsta_520.cc  vcu2acu_sweepworksta_521.cc  vcu_report_505.cc  vehicle_mode_command_105.cc  wheelspeed_report_506.cc
output/pix_driver_msgs/: CMakeLists.txt
output/pix_driver_msgs/msg/: acu_sweepctrlcmd_107.msg  bms_report_512.msg  brake_command_101.msg  brake_report_501.msg  gear_command_103.msg  gear_report_503.msg  park_command_104.msg  park_report_504.msg  steering_command_102.msg  steering_report_502.msg  throttle_command_100.msg  throttle_report_500.msg  vcu2acu_chassiserrcode1_200.msg  vcu2acu_chassiserrcode2_201.msg  vcu2acu_chassiserrcode3_202.msg  vcu2acu_sweepfansta_518.msg  vcu2acu_sweepsta_519.msg  vcu2acu_sweepstafb_517.msg  vcu2acu_sweepweedingsta_520.msg  vcu2acu_sweepworksta_521.msg  vcu_report_505.msg  vehicle_mode_command_105.msg  wheelspeed_report_506.msg
template/: Byte.cc  Byte.cc.tpl  code_CMakeLists.txt.tpl  code_package.xml.tpl  control_command.cpp.tpl  control_command.hpp.tpl  control_command_node.cpp.tpl  control_node.cc.tpl  control_protocol.cc.tpl  control_protocol.h.tpl  msgs_CMakeLists.txt.tpl  msgs_package.xml.tpl  report_node.cc.tpl  report_parser.cpp.tpl  report_parser.hpp.tpl  report_parser_node.cpp.tpl  report_protocol.cc.tpl  report_protocol.h.tpl
template/launch/: pix_driver.launch  pix_driver_write.launch
